// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Typography> should contain the Title and Paragraph components: <Typography.Paragraph> should render a p tag with the text Glints Aries 1`] = `
<p
  className="ParagraphStyles__Paragraph-sc-1w5f8q5-0 jVDRlV aries-typography-paragraph"
  color="#000000"
>
  Glints Aries
</p>
`;

exports[`<Typography> should contain the Title and Paragraph components: <Typography.Title> should render a h1 tag with the text Glints Aries 1`] = `
<h1
  className="TitleStyles__Title-sc-6snwzj-0 hlZIoF aries-typography-title"
  color="#000000"
>
  Glints Aries
</h1>
`;
